HANA: HW07 typo fix

--- a/2021_22/HANA/homework-07/homework.tex
+++ b/2021_22/HANA/homework-07/homework.tex
@@ -137,7 +137,7 @@ $M>0$. Let $p>0$.
    \begin{align*}
       g(x) = \sum_{j=1}^\infty \chi_{J_j}(x)
    \end{align*}
-   where $J_j = (0, j^{-2}]$. Note that for $x\in((n+1)^{-2}, n^{-2})$ where $n\in\N$,
+   where $J_j = (0, j^{-2}]$. Note that for $x\in((n+1)^{-2}, n^{-2}]$ where $n\in\N$,
    we have $\chi_{J_j}(x)=1$ if and only if $j\leq n$. Thus 
    \begin{align*}
       g(x) = \sum_{j=1}^n 1 = n = f(x)
