HANA: HW08 progress

--- a/2021_22/HANA/homework-08/homework.tex
+++ b/2021_22/HANA/homework-08/homework.tex
@@ -75,8 +75,7 @@ For $x>0$ we define
    \begin{align*}
       \frac{d}{dt}\left(L(ty)\right) = yL'(ty) = \frac{1}{t}.
    \end{align*}
-   where we used the \emph{Chain Rule} and (\ref{deriv}). By \emph{Notes, Exercise 4.6}
-   we can write
+   where we used the \emph{Chain Rule} and (\ref{deriv}). We can write
    \begin{align*}
       \int_1^x \left(\frac{d}{dt}L(ty)\right)dt = \int_1^x \frac{dt}{t}.
    \end{align*}
