--- a/2021_22/HANA/homework-08/homework.tex
+++ b/2021_22/HANA/homework-08/homework.tex
@@ -37,7 +37,7 @@
 
 \section*{Workshop 8 - Question 7}
 
-For $x>0$ we define 
+We define the function $L:\R_{>0}\to\R$ by
 \begin{align*}
    L(x) = \int_1^x \frac{dt}{t}.
 \end{align*}
@@ -82,6 +82,55 @@ For $x>0$ we define
    By definition of $L$ and \emph{Notes, Theorem 4.11}, we then get
    \begin{align*}
       L(xy) - L(y) = L(x).
+   \end{align*}
+\end{proof}
+
+\begin{claim*}
+   Let $E:\R\to\R_{>0}$ be the exponential function defined by 
+   \begin{align*}
+      E(x)=\sum_{k=0}^\infty \frac{x^k}{k!}. 
+   \end{align*}
+   Then $L$ is the inverse of $E$. That is, $L(E(x))=x$ for all $x\in\R$.  
+\end{claim*}
+\begin{proof}
+   Consider the derivative 
+   \begin{align*}
+      (L\circ E)'(x) = L'(E(x))E'(x)
+   \end{align*}
+   which we obtained by the \emph{Chain Rule}. We know from previous results that $L'(x) = 1/x$ 
+   and $E'(x) = E(x)$. Thus we obtain 
+   \begin{align*}
+      (L\circ E)'(x) = L(E(x))E(x) = \frac{E(x)}{E(x)} = 1
+   \end{align*}
+   as $E(x)>0$ for all $x\in\R$. We may then conclude that 
+   \begin{align*}
+      \int_0^x (L\circ E)'(t)dt = \int_0^x dt.
+   \end{align*}
+   By \emph{Notes, Theorem 4.11}, it follows that 
+   \begin{align*}
+      (L\circ E)(x) - (L\circ E)(0) = x.
+   \end{align*}
+   However, since $L(E(0)) = L(1) = 0$, the claim follows directly.
+\end{proof}
+
+\begin{claim*}
+   Let $g:[a,b]\to\R$ be continuous and nonnegative. If $\int_a^b g = 0$ then 
+   $g=0$ on $[a,b]$.
+\end{claim*}
+\begin{proof}
+   We define $G:[a,b]\to\R$ by 
+   \begin{align}
+      G(x) = \int_a^x g(t)dt.
+   \end{align}
+   Observe that, by \emph{Notes, Theorem 4.10},
+   \begin{align*}
+      G'(x) = g(x) \geq 0. 
+   \end{align*}
+   Therefore $G$ is nondecreasing. Further, clearly $G(a)=G(b)=0$.
+   Due to the \emph{Mean Value Theorem}, we conclude that for all $x\in[a,b]$, $G(x) = 0$.
+   We differentiate on $[a,b]$ to find 
+   \begin{align*}
+      G'(x) = g(x) = 0.
    \end{align*}
 \end{proof}
 
