HANA: HW08 done

--- a/2021_22/HANA/homework-08/homework.tex
+++ b/2021_22/HANA/homework-08/homework.tex
@@ -113,6 +113,8 @@ We define the function $L:\R_{>0}\to\R$ by
    However, since $L(E(0)) = L(1) = 0$, the claim follows directly.
 \end{proof}
 
+\section*{Workshop 8 - Question 8}
+
 \begin{claim*}
    Let $g:[a,b]\to\R$ be continuous and nonnegative. If $\int_a^b g = 0$ then 
    $g=0$ on $[a,b]$.
