--- a/2021_22/GEO/homework-04/homework.tex
+++ b/2021_22/GEO/homework-04/homework.tex
@@ -56,4 +56,75 @@
 
 \section*{Question 2}
 
+\begin{claim*}
+   The connection 1-forms are
+   \begin{align*}
+      \omega_2^1 = \frac{vdu - udv}{u^2 + v^2},\hs
+      \omega_3^1 = \omega_3^2 = 0.
+   \end{align*}
+\end{claim*}
+\begin{proof}
+   We begin by computing
+   \begin{align*}
+      d\vec e_2 = \frac{1}{(u^2+v^2)^{3/2}}\begin{pmatrix}
+         v^2du - uvdv\\
+         - uvdu + u^2dv\\
+         0
+      \end{pmatrix}.
+   \end{align*}
+   This lets us determine
+   \begin{align*}
+      \omega_2^1 = \vec e_1 \cdot d\vec e_2 = \frac{vdu - udv}{u^2 + v^2}.
+   \end{align*}
+   Finally, we note that $d\vec e_3 = \vec 0$ and thus
+   \begin{align}
+      \label{omega0}
+      \omega_3^1 = \vec e_1 \cdot d\vec e_3=0, \hs \omega_3^2 = \vec e_2 \cdot d\vec e_3=0.
+   \end{align}
+\end{proof}
+
+\begin{claim*}
+   The structure equations,
+   \begin{align}
+      \label{se1}
+      d\theta^1 + \omega_2^1 \wedge \theta^2 = 0,\\
+      \label{se2}
+      d\theta^2 + \omega_1^2 \wedge \theta^1 = 0,\\
+      \label{se3}
+      \omega_1^3\wedge\theta^1 + \omega_2^3\wedge\theta^2 = 0,\\
+      \label{se4}
+      d\omega_2^1+\omega_3^1 \wedge\omega_2^3 = 0,\\
+      \label{se5}
+      d\omega_3^1 + \omega_2^1 \wedge \omega_3^2 = 0,\\
+      \label{se6}
+      d\omega_3^2 + \omega_1^2 \wedge \omega_3^1 = 0,
+   \end{align}
+   are satisfied.
+\end{claim*}
+\begin{proof}
+   Consider (\ref{se1}). We compute 
+   \begin{align*}
+      d\theta^1 = \frac{v}{\sqrt{u^2+v^2}}dv\wedge du,\hs 
+      \omega_2^1 \wedge \theta^2 = \frac{v}{\sqrt{u^2+v^2}}du\wedge dv.
+   \end{align*}
+   Since $dv\wedge du = - du \wedge dv$, the equation holds.
+   Consider (\ref{se2}). We compute 
+   \begin{align*}
+      d\theta^2 = \frac{u}{\sqrt{u^2+v^2}}du\wedge dv, \hs 
+      \omega_1^2 \wedge \theta^1 = - \frac{u}{\sqrt{u^2 + v^2}}du\wedge dv
+   \end{align*}
+   where we used $\omega_1^2 = - \omega_2^1$. The equation clearly holds.
+   Now we observe that (\ref{se3}), (\ref{se5}) and (\ref{se6}) depend on 
+   $\omega_3^2=\omega_3^1=0$ in such a way that they are trivially satisfied.
+   Further, (\ref{se4}) simplifies to 
+   \begin{align*}
+      d\omega_2^1 = 0. 
+   \end{align*}
+   We calculate 
+   \begin{align*}
+      d\omega_2^1 = \frac{u^2-v^2}{u^2+v^2}dv\wedge du + \frac{u^2-v^2}{u^2+v^2}du\wedge dv.
+   \end{align*}
+   Again, by $dv\wedge du = - du \wedge dv$ this clearly holds.
+\end{proof}
+
 \end{document}
