--- a/2021_22/GEO/notes/notes.tex
+++ b/2021_22/GEO/notes/notes.tex
@@ -231,8 +231,6 @@
     \begin{align*}
         s(t) = \int_{t^0}^t v(t)\:dt.
     \end{align*}
-    For a unit-speed parametrisation $s=t-t^0$, hence it is also called an
-    \emph{arc-length parametrisation}.
 \end{definition}
 
 \begin{definition}
@@ -241,9 +239,8 @@
     of $\vec x(t)$. If $g'>0$ it preserves orientation.
 \end{definition}
 
-\begin{theorem}
-    For any regular curve $\vec x:(a,b)\to\E^n$, there exists a reparametrisation
-    which is unit-speed.
+\begin{theorem}[Notes 3.6]
+    For any regular curve, there exists a reparametrisation which is unit-speed.
 \end{theorem}
 
 \begin{definition}
@@ -254,17 +251,15 @@
 \begin{definition}
     The \emph{unit tangent} vector field along a regular curve $\vec x(t)$ is 
     \begin{align*}
-        \vec T(t) = \frac{\vec x'(t)}{v(t)}.
+        \vec T(t) = \frac{\vec x'(t)}{\abs{x'(t)}}.
     \end{align*}
-    Thus, for a unit-speed curve $\vec x(s)$ it is simply $\vec T(s)=\vec x'(s)$.
 \end{definition}
 
 \begin{definition}
-    For a unit-speed curve $\vec x(s)$ the curvature $\kappa(s)$ is defined by
+    For a regular curve $\vec x(s)$ the curvature $\kappa(s)$ is defined by
     \begin{align*}
-        \kappa(s) = \abs{\vec T'(s)}.
+        \kappa(s) = \frac{\abs{\vec T'(s)}}{\abs{x'(t)}}.
     \end{align*}
-    For a general parametrisation thsi becomes $\kappa(t)=\abs{\vec T(t)}/v(t)$.
 \end{definition}
 
 \subsection{The Frenet-Serret frame and the structure equations}
@@ -285,7 +280,7 @@
     \end{align*}
 \end{definition}
 
-\begin{proposition}
+\begin{proposition}[Notes 3.14]
     The vector fields $\{\vec T(s), \vec N(s), \vec B(s)\}$ along a biregular curve
     $\vec x(s)$ are an orthonormal basis for $\E^3$ for each $s$. This is called the
     \emph{Frenet-Serret frame} of $\vec x(t)$.
@@ -299,32 +294,9 @@
 \end{definition}
 
 \begin{theorem}
-    Let $\vec x$ be a unit-speed biregular curve in $\E^3$. The Frenet-Serret
-    frame $\vec T(s), \vec N(s), \vec B(s)$ along $\vec x(s)$ satisfies
-    \begin{align*}
-        \begin{pmatrix}
-            \vec T\\
-            \vec N\\
-            \vec B
-        \end{pmatrix}'
-        = \begin{pmatrix}
-            0       & \kappa & 0 \\
-            -\kappa & 0      & \tau \\
-            0       & -\tau  & 0
-        \end{pmatrix}
-        \begin{pmatrix}
-            \vec T\\
-            \vec N\\
-            \vec B
-        \end{pmatrix}.
-    \end{align*}
-    This is called the \emph{structure equation for a unit-speed space curve},
-    or sometimes the "Frenet-Serret equation".
-\end{theorem}
-
-\begin{theorem}
-    For a general parametrisation $\vec x(t)$ of a biregular space curve the structure
-    equation becomes 
+    Let $\vec x(t)$ be a biregular space curve in $\E^3$. Then the Frenet-Serret 
+    frame $\vec T(t), \vec N(t), \vec B(t)$ along $\vec x(t)$ satisfies the 
+    \emph{structure equations}:
     \begin{align*}
         \begin{pmatrix}
             \vec T\\
@@ -349,6 +321,11 @@
     A biregular curve $\vec x(t)$ is a plane curve if and only if $\tau=0$ everywhere.
 \end{theorem}
 
+\begin{definition}
+    The \emph{osculating plane} at a point on a curve is the plane spanned by $\vec T$ and 
+    $\vec N$. Intuitively, the torsion measures how fast the curve is twisting out of htis plane.
+\end{definition}
+
 \begin{theorem}
     The curvature and torsion of a biregular space curve in any parametrisation can be
     computed by
@@ -370,7 +347,7 @@
     or a \emph{rigid motion}. If $\det A = -1$ the isometry is orientation-reversing.
 \end{definition}
 
-\begin{proposition}
+\begin{proposition}[Notes 3.23]
     The curvature and torsion of a biregular curve are unchanged by a Euclidean motion.
     In other words, taking a unit speed parametrisation, if
     \begin{align*}
